# binance-websocket

./: .gitignore  Dockerfile  README.md  app.py  binance_client.py  database.py  docker-compose.yml  pyproject.toml
config/: users.xml
src/: app.py  binance_client.py  database.py
tests/: binance_client_test.py  clickhouse_writer_test.py
